Switched desktop version from position fixed to overflow hidden so light/dark mode transition works okay

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,8 +17,7 @@
 
 @media (min-width: 768px) {
   .main {
-    position: fixed;
-    top: 0;
+    overflow: hidden;
   }
 }
 
